--- a/custom_components/rrd/manifest.json
+++ b/custom_components/rrd/manifest.json
@@ -1,7 +1,7 @@
 {
   "domain": "rrd",
   "name": "RRD Recorder",
-  "documentation": "https://github.com/dgomes/rrd_encoder",
+  "documentation": "https://github.com/dgomes/rrd_recorder",
   "requirements": ["rrdtool==0.1.15"],
   "codeowners": ["@dgomes"]
 }
